continue fixing swagger docs
